--- a/Parking_CS/Properties/Resources.resx
+++ b/Parking_CS/Properties/Resources.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Ciezarowka" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\grafika\Ciezarowka.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="znak" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\grafika\znak.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="osobowy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\grafika\osobowy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Sport" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\grafika\Sport.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
